tests/expectations/compiler/core/constants/group_gen_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372064]: group::GENERATOR is not a valid core constant.
    --> compiler-test:7:24
     |
   7 |         let a: group = group::GENERATOR;
     |                        ^^^^^
Error [ETYC0372063]: group::GENERATOR is not a valid associated constant.
    --> compiler-test:7:24
     |
   7 |         let a: group = group::GENERATOR;
     |                        ^^^^^^^^^^^^^^^^
"""]
